<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="spinner" type="id" />
    <item name="list_match" type="id" />
    <item name="date_event" type="id" />
    <item name="home_name" type="id" />
    <item name="home_score" type="id" />
    <item name="away_score" type="id" />
    <item name="away_name" type="id" />
    <item name="swipeRefresh" type="id"/>
</resources>